@@ -17,4 +17,7 @@
   getting the right values for the voltage divider resistors.
 + Release version (0.3)
 
+16 June 2010
++ Add scroll_string demo
+
 
